# GestureWithNcnn

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/dmrf/gesturewithncnn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/Ncnn/: CMakeLists.txt  gesturencnn.cpp
app/src/main/cpp/Signal/: CMakeLists.txt  signalnative.cpp
app/src/main/cpp/Signal/ADist/: ADist.cpp  ADist.h  ADist_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
app/src/main/cpp/Signal/mycic/: CICDecimator.cpp  CICDecimator.h  FIRCombFilter.cpp  FIRCombFilter.h  MyCic.cpp  MyCic.h  MyCic_initialize.cpp  MyCic_initialize.h  MyCic_terminate.cpp  MyCic_terminate.h  MyCic_types.h  SystemCore.cpp  SystemCore.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  step.cpp  step.h
app/src/main/cpp/Signal/sup/: LEVD.cpp  LEVD.h  Last.h  Peak.cpp  Peak.h  support.cpp
app/src/main/java/com/example/dmrf/gesturewithncnn/: MainActivity.java
app/src/main/java/com/example/dmrf/gesturewithncnn/Activity/: MainActivity.java
app/src/main/java/com/example/dmrf/gesturewithncnn/JavaBean/: DataBean.java  GlobalBean.java
app/src/main/java/com/example/dmrf/gesturewithncnn/JniClass/: GestureNcnn.java  SignalProcess.java
app/src/main/java/com/example/dmrf/gesturewithncnn/TestProcess/: GestureTest.java  SignalNativeTest.java
app/src/main/java/com/example/dmrf/gesturewithncnn/Thread/: InstantPlayThread.java  InstantRecordThread.java
app/src/main/java/com/example/dmrf/gesturewithncnn/Utils/: FrequencyPlayerUtils.java  SendDataUtils.java  SqueezeNcnn.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/dmrf/gesturewithncnn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
